Store access tokens in .env (fixed #8)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
             "type": "node",
             "request": "launch",
             "name": "Iniciar programa",
-            "program": "${workspaceFolder}/handler.js"
+            "program": "${workspaceFolder}/handler.js",
+            "envFile": "${workspaceFolder}/dev.env"
         }
     ]
 }
