--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Iniciar programa",
-            "program": "${workspaceFolder}/handler.js",
+            "program": "${workspaceFolder}/lib/handler.js",
             "envFile": "${workspaceFolder}/dev.env"
         }
     ]
