Removed dynamodb-geo Search is now done by downloading all the table and calculating the nearest result locally

--- a/serverless.yml
+++ b/serverless.yml
@@ -11,8 +11,7 @@ provider:
   iamRoleStatements:
     - Effect: "Allow"
       Action:
-        - dynamodb:GetItem
-        - dynamodb:Query
+        - dynamodb:Scan
       Resource: "arn:aws:dynamodb:eu-west-1:*:*"
 
 functions:
