--- a/package.json
+++ b/package.json
@@ -21,13 +21,12 @@
   },
   "homepage": "https://github.com/elizabeth-dev/NearBot#readme",
   "dependencies": {
-    "aws-sdk": "^2.297.0",
-    "botgram": "^2.2.0",
-    "dynamodb-geo": "^0.4.0"
+    "aws-sdk": "^2.328.0",
+    "botgram": "^2.2.0"
   },
   "devDependencies": {
     "dotenv": "^6.0.0",
-    "eslint": "^5.4.0",
+    "eslint": "^5.6.1",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^3.8.0"
   }
