--- a/serverless.yml
+++ b/serverless.yml
@@ -33,8 +33,8 @@ functions:
           path: NearBot_Madrid
           method: post
     tags:
-      - Project: NearBot
-      - NearBot_city: Madrid
-      - NearBot_resource: Function
-      - NearBot_environment: ${self:provider.stage}
-      - NearBot_version: ${file(./getEnv.js):getEnvVars.NEARBOT_VERSION}
+      Project: NearBot
+      NearBot_city: Madrid
+      NearBot_resource: Function
+      NearBot_environment: ${self:provider.stage}
+      NearBot_version: ${file(./getEnv.js):getEnvVars.NEARBOT_VERSION}
