--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "botgram": "^2.2.0"
   },
   "devDependencies": {
+    "browserify": "^16.2.3",
     "dotenv": "^6.1.0",
     "eslint": "^5.6.1",
     "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^3.8.0"
+    "eslint-plugin-promise": "^3.8.0",
+    "serverless-plugin-browserifier": "^2.1.0"
   }
 }
