--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^5.7.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^3.8.0",
+    "serverless-offline": "^3.28.0",
     "serverless-plugin-browserifier": "^2.1.0"
   }
 }
