--- a/serverless.yml
+++ b/serverless.yml
@@ -4,6 +4,8 @@ tenant: elizabethdev
 
 plugins:
   - serverless-plugin-browserifier
+  - serverless-offline
+
 package:
   individually: true
 
@@ -12,6 +14,12 @@ custom:
     exclude:
       - aws-sdk
       - aws-sdk/clients/dynamodb
+  serverless-offline:
+    port: 8443
+    host: 0.0.0.0
+    region: eu-west-1
+    httpsProtocol: "ssl"
+
 
 provider:
   name: aws
