Added logging system (fixed #6)

--- a/serverless.yml
+++ b/serverless.yml
@@ -30,6 +30,8 @@ provider:
     - Effect: "Allow"
       Action:
         - dynamodb:Scan
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
       Resource: "arn:aws:dynamodb:eu-west-1:*:*"
 
 functions:
